src-tauri/logs_v4.txt
    Checking tauri-apphowlingual v0.1.0 (C:\Users\Flow\Antigravity\Howlingual\src-tauri)
error[E0277]: the trait bound `ArrayBase<OwnedRepr<f32>, Dim<[usize; 4]>>: OwnedTensorArrayData<_>` is not satisfied
   --> src\ocr_engine.rs:151:58
    |
151 |         let input_value = ort::value::Tensor::from_array(input_tensor)?;
    |                           ------------------------------ ^^^^^^^^^^^^ the trait `OwnedTensorArrayData<_>` is not implemented for `ArrayBase<OwnedRepr<f32>, Dim<[usize; 4]>>`
    |                           |
    |                           required by a bound introduced by this call
    |
    = help: the following other types implement trait `OwnedTensorArrayData<I>`:
              (D, Box<[T]>)
              (D, Vec<T>)
              ndarray::ArrayBase<ndarray::data_repr::OwnedRepr<T>, D>
note: required by a bound in `ort::value::impl_tensor::create::<impl ort::value::Value<TensorValueType<T>>>::from_array`
   --> C:\Users\Flow\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\ort-2.0.0-rc.11\src\value\impl_tensor\create.rs:140:32
    |
140 |     pub fn from_array(input: impl OwnedTensorArrayData<T>) -> Result<Tensor<T>> {
    |                                   ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ort::value::impl_tensor::create::<impl Value<TensorValueType<T>>>::from_array`

error[E0277]: the trait bound `ArrayBase<OwnedRepr<f32>, Dim<[usize; 4]>>: OwnedTensorArrayData<_>` is not satisfied
   --> src\ocr_engine.rs:244:58
    |
244 |         let input_value = ort::value::Tensor::from_array(input_tensor)?;
    |                           ------------------------------ ^^^^^^^^^^^^ the trait `OwnedTensorArrayData<_>` is not implemented for `ArrayBase<OwnedRepr<f32>, Dim<[usize; 4]>>`
    |                           |
    |                           required by a bound introduced by this call
    |
    = help: the following other types implement trait `OwnedTensorArrayData<I>`:
              (D, Box<[T]>)
              (D, Vec<T>)
              ndarray::ArrayBase<ndarray::data_repr::OwnedRepr<T>, D>
note: required by a bound in `ort::value::impl_tensor::create::<impl ort::value::Value<TensorValueType<T>>>::from_array`
   --> C:\Users\Flow\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\ort-2.0.0-rc.11\src\value\impl_tensor\create.rs:140:32
    |
140 |     pub fn from_array(input: impl OwnedTensorArrayData<T>) -> Result<Tensor<T>> {
    |                                   ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ort::value::impl_tensor::create::<impl Value<TensorValueType<T>>>::from_array`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tauri-apphowlingual` (lib) due to 2 previous errors
